Fixed clipping issues with team cards, added Yi Jian photo and Glen's insta

--- a/style/main.css
+++ b/style/main.css
@@ -524,7 +524,7 @@ nav .icon {
     z-index: 1000;
     top: -20px;
     left: -30px;
-    height: 370px;
+    height: 385px;
     width: 230px;
     padding: 20px;
     border-radius: 15px;
